// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getAiSimpleSetupMarkdownOutput > language: js > renders with csf-factory preview: false 1`] = `
"# Storybook Simple Setup

## Project Info

| Property | Value |
|----------|-------|
| Version | 10.5.2 |
| Renderer | @storybook/react |
| Framework | @storybook/react-vite |
| Builder | @storybook/builder-vite |
| Config Dir | \`.storybook\` |
| Language | JavaScript |
| Package Manager | npm |
| Addons | @storybook/addon-docs, @storybook/addon-vitest |

Your goal is to write **one story file for one simple component**, so the user sees their own component rendered in Storybook. Keep it fast and minimal: no new addons, no data mocking, no refactors, no extra stories.

### Step 1 — Pick one simple component (and note the runners-up)

Look through the project's own components and pick the **simplest presentational leaf component** you can find — think Button, Badge, Tag, Avatar: a handful of props, no data fetching, no routing, no app-specific context. Skip anything created by \`storybook init\` (e.g. \`src/stories/\`).

While scanning, note the 2–4 next-best candidates (a mix of simple and more interesting components). You will offer these to the user at the end — do **not** write stories for them now.

### Step 2 — Make sure global styling loads

Find how the app loads its global CSS and theme: a CSS import in the entry file (\`main.jsx\` / \`index.jsx\`), a \`<link>\` or inline \`<style>\` in \`index.html\`, Tailwind, CSS variables, or a theme provider.

**Edit the existing \`.storybook/preview.jsx\`** (created by \`storybook init\`) so it loads the same global CSS the app uses — add to what is there, don't replace it:

\`\`\`jsx
// .storybook/preview.jsx
import '../src/index.css'; // the same global CSS the app loads

const preview = {
  // keep whatever is already configured here
};

export default preview;
\`\`\`

- If the CSS is loaded via \`<link>\` in \`index.html\` rather than imported in JS, import that same file in the preview.
- Only add a decorator (e.g. a ThemeProvider) if the chosen component actually needs it to render. Don't invent providers.

### Step 3 — Write the story file

Write **one** colocated story file next to the chosen component: the default story, at most a couple of meaningful variants, and one \`StyleCheck\` story.

\`\`\`jsx
// src/components/Button.stories.jsx
import { expect } from 'storybook/test';

import { Button } from './Button';

const meta = {
  component: Button,
  tags: ['ai-generated'],
};

export default meta;

export const Primary = {
  args: { children: 'Order now' },
};

export const Disabled = {
  args: { children: 'Order now', disabled: true },
};

// Proves the app's global CSS actually loaded: read a real styling value
// from the component's source (hex color, Tailwind class, CSS variable)
// and assert the resolved computed style.
export const StyleCheck = {
  args: { children: 'Submit' },
  play: async ({ canvas }) => {
    const button = canvas.getByRole('button', { name: /submit/i });
    // Button uses bg-blue-600 — fails if Tailwind / global CSS did not load.
    await expect(getComputedStyle(button).backgroundColor).toBe('rgb(37, 99, 235)');
  },
};
\`\`\`

- Tag the file with \`tags: ['ai-generated']\`.
- Don't add a custom \`title\`.
- Don't create new app components or story-specific harnesses.

### Step 4 — Start Storybook and verify

Start the Storybook dev server in the background (or reuse one that already serves this project, usually \`http://localhost:6006\`), using the project's existing \`package.json\` script. Leave it running when you are done — it is part of the deliverable.

Then run the story tests for the new file through Storybook itself and self-heal until they pass. Read the command's help in its entirety before the first run — it documents the payload shape:

\`\`\`bash
STORYBOOK_FEATURE_AI_CLI=1 npx storybook ai run-story-tests --help
\`\`\`

1. Run the tests for the new story file only (\`STORYBOOK_FEATURE_AI_CLI=1 npx storybook ai run-story-tests ...\`).
2. If a test fails, read the error and fix the cause — prefer fixing \`.storybook/preview.jsx\` (missing CSS import, missing provider) over story-local workarounds. If the \`StyleCheck\` assertion fails, the global CSS is not loading in the preview; fix that before anything else.
3. Re-run the tests and repeat. Cap this loop at ~5 attempts — if the tests still fail, stop and explain to the user what went wrong and what the possible next steps are.

### Step 5 — Wrap up

Tell the user what you built and where. Then end with this offer, filling in the real component names you noted in Step 1:

> Do you want me to build out stories for more components? For example **A**, **B** and **C**.

If the user says yes, run \`npx storybook ai setup\` and follow its instructions to build out stories for the rest of the project."
`;

exports[`getAiSimpleSetupMarkdownOutput > language: js > renders with csf-factory preview: true 1`] = `
"# Storybook Simple Setup

## Project Info

| Property | Value |
|----------|-------|
| Version | 10.5.2 |
| Renderer | @storybook/react |
| Framework | @storybook/react-vite |
| Builder | @storybook/builder-vite |
| Config Dir | \`.storybook\` |
| Language | JavaScript |
| Package Manager | npm |
| Addons | @storybook/addon-docs, @storybook/addon-vitest |

Your goal is to write **one story file for one simple component**, so the user sees their own component rendered in Storybook. Keep it fast and minimal: no new addons, no data mocking, no refactors, no extra stories.

### Step 1 — Pick one simple component (and note the runners-up)

Look through the project's own components and pick the **simplest presentational leaf component** you can find — think Button, Badge, Tag, Avatar: a handful of props, no data fetching, no routing, no app-specific context. Skip anything created by \`storybook init\` (e.g. \`src/stories/\`).

While scanning, note the 2–4 next-best candidates (a mix of simple and more interesting components). You will offer these to the user at the end — do **not** write stories for them now.

### Step 2 — Make sure global styling loads

Find how the app loads its global CSS and theme: a CSS import in the entry file (\`main.jsx\` / \`index.jsx\`), a \`<link>\` or inline \`<style>\` in \`index.html\`, Tailwind, CSS variables, or a theme provider.

**Edit the existing \`.storybook/preview.jsx\`** (created by \`storybook init\`) so it loads the same global CSS the app uses — add to what is there, don't replace it:

\`\`\`jsx
// .storybook/preview.jsx
import '../src/index.css'; // the same global CSS the app loads

import { definePreview } from 'storybook/preview';

export default definePreview({
  // keep whatever is already configured here
});
\`\`\`

- If the CSS is loaded via \`<link>\` in \`index.html\` rather than imported in JS, import that same file in the preview.
- Only add a decorator (e.g. a ThemeProvider) if the chosen component actually needs it to render. Don't invent providers.

### Step 3 — Write the story file

Write **one** colocated story file next to the chosen component: the default story, at most a couple of meaningful variants, and one \`StyleCheck\` story.

\`\`\`jsx
// src/components/Button.stories.jsx
import { expect } from 'storybook/test';

import preview from '#.storybook/preview';
import { Button } from './Button';

const meta = preview.meta({
  component: Button,
  tags: ['ai-generated'],
});

export const Primary = meta.story({
  args: { children: 'Order now' },
});

export const Disabled = meta.story({
  args: { children: 'Order now', disabled: true },
});

// Proves the app's global CSS actually loaded: read a real styling value
// from the component's source (hex color, Tailwind class, CSS variable)
// and assert the resolved computed style.
export const StyleCheck = meta.story({
  args: { children: 'Submit' },
  play: async ({ canvas }) => {
    const button = canvas.getByRole('button', { name: /submit/i });
    // Button uses bg-blue-600 — fails if Tailwind / global CSS did not load.
    await expect(getComputedStyle(button).backgroundColor).toBe('rgb(37, 99, 235)');
  },
});
\`\`\`

- Tag the file with \`tags: ['ai-generated']\`.
- Don't add a custom \`title\`.
- Don't create new app components or story-specific harnesses.

### Step 4 — Start Storybook and verify

Start the Storybook dev server in the background (or reuse one that already serves this project, usually \`http://localhost:6006\`), using the project's existing \`package.json\` script. Leave it running when you are done — it is part of the deliverable.

Then run the story tests for the new file through Storybook itself and self-heal until they pass. Read the command's help in its entirety before the first run — it documents the payload shape:

\`\`\`bash
STORYBOOK_FEATURE_AI_CLI=1 npx storybook ai run-story-tests --help
\`\`\`

1. Run the tests for the new story file only (\`STORYBOOK_FEATURE_AI_CLI=1 npx storybook ai run-story-tests ...\`).
2. If a test fails, read the error and fix the cause — prefer fixing \`.storybook/preview.jsx\` (missing CSS import, missing provider) over story-local workarounds. If the \`StyleCheck\` assertion fails, the global CSS is not loading in the preview; fix that before anything else.
3. Re-run the tests and repeat. Cap this loop at ~5 attempts — if the tests still fail, stop and explain to the user what went wrong and what the possible next steps are.

### Step 5 — Wrap up

Tell the user what you built and where. Then end with this offer, filling in the real component names you noted in Step 1:

> Do you want me to build out stories for more components? For example **A**, **B** and **C**.

If the user says yes, run \`npx storybook ai setup\` and follow its instructions to build out stories for the rest of the project."
`;

exports[`getAiSimpleSetupMarkdownOutput > language: ts > renders with csf-factory preview: false 1`] = `
"# Storybook Simple Setup

## Project Info

| Property | Value |
|----------|-------|
| Version | 10.5.2 |
| Renderer | @storybook/react |
| Framework | @storybook/react-vite |
| Builder | @storybook/builder-vite |
| Config Dir | \`.storybook\` |
| Language | TypeScript |
| Package Manager | npm |
| Addons | @storybook/addon-docs, @storybook/addon-vitest |

Your goal is to write **one story file for one simple component**, so the user sees their own component rendered in Storybook. Keep it fast and minimal: no new addons, no data mocking, no refactors, no extra stories.

### Step 1 — Pick one simple component (and note the runners-up)

Look through the project's own components and pick the **simplest presentational leaf component** you can find — think Button, Badge, Tag, Avatar: a handful of props, no data fetching, no routing, no app-specific context. Skip anything created by \`storybook init\` (e.g. \`src/stories/\`).

While scanning, note the 2–4 next-best candidates (a mix of simple and more interesting components). You will offer these to the user at the end — do **not** write stories for them now.

### Step 2 — Make sure global styling loads

Find how the app loads its global CSS and theme: a CSS import in the entry file (\`main.tsx\` / \`index.tsx\`), a \`<link>\` or inline \`<style>\` in \`index.html\`, Tailwind, CSS variables, or a theme provider.

**Edit the existing \`.storybook/preview.tsx\`** (created by \`storybook init\`) so it loads the same global CSS the app uses — add to what is there, don't replace it:

\`\`\`tsx
// .storybook/preview.tsx
import type { Preview } from '@storybook/react-vite';
import '../src/index.css'; // the same global CSS the app loads

const preview: Preview = {
  // keep whatever is already configured here
};

export default preview;
\`\`\`

- If the CSS is loaded via \`<link>\` in \`index.html\` rather than imported in JS, import that same file in the preview.
- Only add a decorator (e.g. a ThemeProvider) if the chosen component actually needs it to render. Don't invent providers.

### Step 3 — Write the story file

Write **one** colocated story file next to the chosen component: the default story, at most a couple of meaningful variants, and one \`StyleCheck\` story.

\`\`\`tsx
// src/components/Button.stories.tsx
import type { Meta, StoryObj } from '@storybook/react-vite';
import { expect } from 'storybook/test';

import { Button } from './Button';

const meta = {
  component: Button,
  tags: ['ai-generated'],
} satisfies Meta<typeof Button>;

export default meta;
type Story = StoryObj<typeof meta>;

export const Primary: Story = {
  args: { children: 'Order now' },
};

export const Disabled: Story = {
  args: { children: 'Order now', disabled: true },
};

// Proves the app's global CSS actually loaded: read a real styling value
// from the component's source (hex color, Tailwind class, CSS variable)
// and assert the resolved computed style.
export const StyleCheck: Story = {
  args: { children: 'Submit' },
  play: async ({ canvas }) => {
    const button = canvas.getByRole('button', { name: /submit/i });
    // Button uses bg-blue-600 — fails if Tailwind / global CSS did not load.
    await expect(getComputedStyle(button).backgroundColor).toBe('rgb(37, 99, 235)');
  },
};
\`\`\`

- Tag the file with \`tags: ['ai-generated']\`.
- Don't add a custom \`title\`.
- Don't create new app components or story-specific harnesses.

### Step 4 — Start Storybook and verify

Start the Storybook dev server in the background (or reuse one that already serves this project, usually \`http://localhost:6006\`), using the project's existing \`package.json\` script. Leave it running when you are done — it is part of the deliverable.

Then run the story tests for the new file through Storybook itself and self-heal until they pass. Read the command's help in its entirety before the first run — it documents the payload shape:

\`\`\`bash
STORYBOOK_FEATURE_AI_CLI=1 npx storybook ai run-story-tests --help
\`\`\`

1. Run the tests for the new story file only (\`STORYBOOK_FEATURE_AI_CLI=1 npx storybook ai run-story-tests ...\`).
2. If a test fails, read the error and fix the cause — prefer fixing \`.storybook/preview.tsx\` (missing CSS import, missing provider) over story-local workarounds. If the \`StyleCheck\` assertion fails, the global CSS is not loading in the preview; fix that before anything else.
3. Re-run the tests and repeat. Cap this loop at ~5 attempts — if the tests still fail, stop and explain to the user what went wrong and what the possible next steps are.

### Step 5 — Wrap up

Tell the user what you built and where. Then end with this offer, filling in the real component names you noted in Step 1:

> Do you want me to build out stories for more components? For example **A**, **B** and **C**.

If the user says yes, run \`npx storybook ai setup\` and follow its instructions to build out stories for the rest of the project."
`;

exports[`getAiSimpleSetupMarkdownOutput > language: ts > renders with csf-factory preview: true 1`] = `
"# Storybook Simple Setup

## Project Info

| Property | Value |
|----------|-------|
| Version | 10.5.2 |
| Renderer | @storybook/react |
| Framework | @storybook/react-vite |
| Builder | @storybook/builder-vite |
| Config Dir | \`.storybook\` |
| Language | TypeScript |
| Package Manager | npm |
| Addons | @storybook/addon-docs, @storybook/addon-vitest |

Your goal is to write **one story file for one simple component**, so the user sees their own component rendered in Storybook. Keep it fast and minimal: no new addons, no data mocking, no refactors, no extra stories.

### Step 1 — Pick one simple component (and note the runners-up)

Look through the project's own components and pick the **simplest presentational leaf component** you can find — think Button, Badge, Tag, Avatar: a handful of props, no data fetching, no routing, no app-specific context. Skip anything created by \`storybook init\` (e.g. \`src/stories/\`).

While scanning, note the 2–4 next-best candidates (a mix of simple and more interesting components). You will offer these to the user at the end — do **not** write stories for them now.

### Step 2 — Make sure global styling loads

Find how the app loads its global CSS and theme: a CSS import in the entry file (\`main.tsx\` / \`index.tsx\`), a \`<link>\` or inline \`<style>\` in \`index.html\`, Tailwind, CSS variables, or a theme provider.

**Edit the existing \`.storybook/preview.tsx\`** (created by \`storybook init\`) so it loads the same global CSS the app uses — add to what is there, don't replace it:

\`\`\`tsx
// .storybook/preview.tsx
import '../src/index.css'; // the same global CSS the app loads

import { definePreview } from 'storybook/preview';

export default definePreview({
  // keep whatever is already configured here
});
\`\`\`

- If the CSS is loaded via \`<link>\` in \`index.html\` rather than imported in JS, import that same file in the preview.
- Only add a decorator (e.g. a ThemeProvider) if the chosen component actually needs it to render. Don't invent providers.

### Step 3 — Write the story file

Write **one** colocated story file next to the chosen component: the default story, at most a couple of meaningful variants, and one \`StyleCheck\` story.

\`\`\`tsx
// src/components/Button.stories.tsx
import { expect } from 'storybook/test';

import preview from '#.storybook/preview';
import { Button } from './Button';

const meta = preview.meta({
  component: Button,
  tags: ['ai-generated'],
});

export const Primary = meta.story({
  args: { children: 'Order now' },
});

export const Disabled = meta.story({
  args: { children: 'Order now', disabled: true },
});

// Proves the app's global CSS actually loaded: read a real styling value
// from the component's source (hex color, Tailwind class, CSS variable)
// and assert the resolved computed style.
export const StyleCheck = meta.story({
  args: { children: 'Submit' },
  play: async ({ canvas }) => {
    const button = canvas.getByRole('button', { name: /submit/i });
    // Button uses bg-blue-600 — fails if Tailwind / global CSS did not load.
    await expect(getComputedStyle(button).backgroundColor).toBe('rgb(37, 99, 235)');
  },
});
\`\`\`

- Tag the file with \`tags: ['ai-generated']\`.
- Don't add a custom \`title\`.
- Don't create new app components or story-specific harnesses.

### Step 4 — Start Storybook and verify

Start the Storybook dev server in the background (or reuse one that already serves this project, usually \`http://localhost:6006\`), using the project's existing \`package.json\` script. Leave it running when you are done — it is part of the deliverable.

Then run the story tests for the new file through Storybook itself and self-heal until they pass. Read the command's help in its entirety before the first run — it documents the payload shape:

\`\`\`bash
STORYBOOK_FEATURE_AI_CLI=1 npx storybook ai run-story-tests --help
\`\`\`

1. Run the tests for the new story file only (\`STORYBOOK_FEATURE_AI_CLI=1 npx storybook ai run-story-tests ...\`).
2. If a test fails, read the error and fix the cause — prefer fixing \`.storybook/preview.tsx\` (missing CSS import, missing provider) over story-local workarounds. If the \`StyleCheck\` assertion fails, the global CSS is not loading in the preview; fix that before anything else.
3. Re-run the tests and repeat. Cap this loop at ~5 attempts — if the tests still fail, stop and explain to the user what went wrong and what the possible next steps are.

### Step 5 — Wrap up

Tell the user what you built and where. Then end with this offer, filling in the real component names you noted in Step 1:

> Do you want me to build out stories for more components? For example **A**, **B** and **C**.

If the user says yes, run \`npx storybook ai setup\` and follow its instructions to build out stories for the rest of the project."
`;
